# paisalog

./: README.md  manage.py  pyproject.toml
core/: admin.py  filters.py  forms.py  menus.py  models.py  tables.py  urls.py  views.py
core/management/commands/: create_sample_data.py
core/migrations/: 0001_initial.py  0002_sample_data.py  0003_alter_category_options_alter_entry_options_and_more.py  0004_category_entry_type_category_is_default.py  0005_auto_20250511_1053.py  0006_remove_category_entry_type_userprofile.py  0007_category_entry_type_alter_category_user.py  0008_userprofile_is_salaried_and_more.py  0009_create_missing_profiles.py  0010_alter_userprofile_user.py  0011_alter_entry_date.py  0012_userprofile_currency_symbol.py
core/templatetags/: core_extras.py
paisalog/: asgi.py  settings.py  urls.py  wsgi.py
static/: manifest.json  sw.js
static/js/: forms.js  serviceworker.js
templates/: _navbar.html  base.html  dashboard.html  profile_form.html
templates/categories/: confirm_delete.html  form.html  list.html  table_actions.html
templates/django_tables2/: bootstrap4.html  bootstrap5.html  table.html
templates/entries/: category_options.html  confirm_delete.html  delete.html  form.html  list.html  table_actions.html
templates/partials/: _summary_cards.html
templates/registration/: login.html  signup.html
